BHTableModel: Minor code refactor