@@ -58,7 +58,7 @@ import javax.swing.table.AbstractTableModel;
 public class BHTableModel extends AbstractTableModel {
 
 	/** vector holding the entries of the BHT */ 
-	private Vector m_entries;
+	private Vector<BHTEntry> m_entries;
 	
 	/** number of entries in the BHT */
 	private int m_entryCnt;
@@ -71,7 +71,7 @@ public class BHTableModel extends AbstractTableModel {
 	
 	/** type of the table columns */
 	//@SuppressWarnings("unchecked")
-	private Class m_columnClasses[] = {	Integer.class, String.class, String.class, Integer.class, Integer.class, Double.class};
+	private Class<?> m_columnClasses[] = {	Integer.class, String.class, String.class, Integer.class, Integer.class, Double.class};
 
 	
 	/**
@@ -92,6 +92,7 @@ public class BHTableModel extends AbstractTableModel {
 	 * @param i the index of the column
 	 * @return name of the i-th column
 	 */
+	@Override
     public String getColumnName(int i) {
     	if (i < 0 || i > m_columnNames.length) 
     		throw new IllegalArgumentException("Illegal column index "  + i + " (must be in range 0.." + (m_columnNames.length-1) + ")");
@@ -106,8 +107,9 @@ public class BHTableModel extends AbstractTableModel {
 	 * 
 	 * @param i the index of the column
 	 * @return class representing the type of the i-th column
-	 */    
-	public Class getColumnClass(int i) {
+	 */
+	@Override
+	public Class<?> getColumnClass(int i) {
     	if (i < 0 || i > m_columnClasses.length) 
     		throw new IllegalArgumentException("Illegal column index "  + i + " (must be in range 0.." + (m_columnClasses.length-1) + ")");
     	
@@ -147,15 +149,15 @@ public class BHTableModel extends AbstractTableModel {
 	 */
 	public Object getValueAt(int row, int col) { 
 				
-		BHTEntry e = (BHTEntry) m_entries.elementAt(row);
-		if (e==null) return "";
+		BHTEntry e = m_entries.elementAt(row);
+		if (e == null) return "";
 		
-		if (col==0) return new Integer(row);		
-		if (col==1) return e.getHistoryAsStr();
-		if (col==2) return e.getPredictionAsStr();
-		if (col==3) return new Integer(e.getStatsPredCorrect());
-		if (col==4) return new Integer(e.getStatsPredIncorrect());
-		if (col==5) return new Double(e.getStatsPredPrecision());
+		if (col == 0) return Integer.valueOf(row);		
+		if (col == 1) return e.getHistoryAsStr();
+		if (col == 2) return e.getPredictionAsStr();
+		if (col == 3) return Integer.valueOf(e.getStatsPredCorrect());
+		if (col == 4) return Integer.valueOf(e.getStatsPredIncorrect());
+		if (col == 5) return Double.valueOf(e.getStatsPredPrecision());
 		
 		return "";
 	}
@@ -180,7 +182,7 @@ public class BHTableModel extends AbstractTableModel {
 		m_entryCnt = numEntries;
 		m_historySize = historySize;
 		
-		m_entries = new Vector();
+		m_entries = new Vector<>();
 		
 		for (int i=0; i < m_entryCnt; i++) {
 			m_entries.add(new BHTEntry(m_historySize, initVal));
@@ -216,7 +218,7 @@ public class BHTableModel extends AbstractTableModel {
 		if (index < 0 || index > m_entryCnt) 
 			throw new IllegalArgumentException("Only indexes in the range 0 to " + (m_entryCnt-1) + " allowed");
 		
-		return ((BHTEntry) m_entries.elementAt(index)).getPrediction();
+		return m_entries.elementAt(index).getPrediction();
 	}
 	
 	
@@ -231,7 +233,7 @@ public class BHTableModel extends AbstractTableModel {
 		if (index < 0 || index > m_entryCnt) 
 			throw new IllegalArgumentException("Only indexes in the range 0 to " + (m_entryCnt-1) + " allowed");
 		
-		((BHTEntry) m_entries.elementAt(index)).updatePrediction(branchTaken);
+		m_entries.elementAt(index).updatePrediction(branchTaken);
 		fireTableRowsUpdated(index, index);
 	}
 
